[project]
name = "fastapi-cache2"
version = "0.2.2"
description = "Cache for FastAPI"
authors = [{ name = "long2ice", email = "long2ice@gmail.com" }]
requires-python = "~=3.8"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "fastapi",
    "cache",
    "caching",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "typing-extensions>=4.1.0",
    "importlib-metadata>=6.6.0,<7 ; python_version < '3.8'",
    "pendulum>=3.0.0,<4",
]

[project.optional-dependencies]
redis = ["redis[redis]>=5.0.8,<6"]
memcache = ["aiomcache>=0.8.2,<0.9"]
dynamodb = ["aiobotocore>=2.13.1,<3"]
all = [
    "redis[redis]>=5.0.8,<6",
    "aiomcache>=0.8.2,<0.9",
    "aiobotocore>=2.13.1,<3",
]

[project.urls]
Homepage = "https://github.com/long2ice/fastapi-cache"
Repository = "https://github.com/long2ice/fastapi-cache.git"
Documentation = "https://github.com/long2ice/fastapi-cache"

[dependency-groups]
linting = [
    "mypy>=1.2.0,<2 ; python_version ~= '3.10'",
    "pyright>=1.1.373,<2 ; python_version ~= '3.10'",
    "types-aiobotocore[dynamodb]>=2.5.0.post2,<3 ; python_version ~= '3.10'",
    "types-redis>=4.5.4.2,<5 ; python_version ~= '3.10'",
    "ruff>=0.0.267,<0.1.2 ; python_version ~= '3.10'",
]
dev = [
    "pytest",
    "requests",
    "coverage>=6.5,<8.0",
    "httpx",
    "tox>=4.5.1,<5",
    "towncrier>=22.12.0,<23",
]
distributing = ["twine>=4.0.2,<5 ; python_version ~= '3.10'"]

[tool.uv]
default-groups = [
    "linting",
    "dev",
    "distributing",
]

[tool.hatch.build.targets.sdist]
include = [
    "fastapi_cache",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "fastapi_cache",
    "LICENSE",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["."]
python_version = "3.8"
# equivalent of --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "examples.*.main"
ignore_errors = true

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "fastapi_cache"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/long2ice/fastapi-cache/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/long2ice/fastapi-cache/issues/{issue})"

[tool.pyright]
strict = ["fastapi_cache", "tests"]
pythonVersion = "3.8"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.ruff]
ignore = ["E501"]
line-length = 80
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "W", # pycodestyle warnings
    "UP", # pyupgrade
]
target-version = "py38"
